--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -29,10 +29,10 @@
         android:textSize="20sp"
         android:id="@+id/button"
         android:layout_above="@+id/button2"
-        android:layout_alignLeft="@+id/tvHeading"
-        android:layout_alignStart="@+id/tvHeading"
-        android:layout_alignRight="@+id/tvHeading"
-        android:layout_alignEnd="@+id/tvHeading" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/textView"
+        android:layout_toLeftOf="@+id/textView" />
 
     <Button
         android:layout_width="wrap_content"
@@ -54,6 +54,28 @@
         android:id="@+id/textView"
         android:layout_above="@+id/button"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Directions"
+        android:textSize="20sp"
+        android:id="@+id/button4"
+        android:layout_below="@+id/textView"
+        android:layout_toRightOf="@+id/button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Exit"
+        android:textSize="20sp"
+        android:id="@+id/button5"
+        android:layout_below="@+id/button4"
+        android:layout_toRightOf="@+id/button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
