--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -61,8 +61,7 @@
         android:text="Directions"
         android:textSize="20sp"
         android:id="@+id/button4"
-        android:layout_below="@+id/textView"
-        android:layout_toRightOf="@+id/button"
+        android:layout_alignTop="@+id/button"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -73,9 +72,31 @@
         android:textSize="20sp"
         android:id="@+id/button5"
         android:layout_below="@+id/button4"
-        android:layout_toRightOf="@+id/button"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignLeft="@+id/button4"
+        android:layout_alignStart="@+id/button4" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fname1"
+        android:hint="File Name"
+        android:layout_alignTop="@+id/button"
+        android:layout_toLeftOf="@+id/button4"
+        android:layout_alignBottom="@+id/button5"
+        android:layout_toRightOf="@+id/button"
+        android:layout_toEndOf="@+id/button" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv"
+        android:focusable="false"
+        android:layout_above="@+id/button"
+        android:layout_alignRight="@+id/imageViewCompass"
+        android:layout_alignEnd="@+id/imageViewCompass"
+        android:layout_alignLeft="@+id/imageViewCompass"
+        android:layout_alignStart="@+id/imageViewCompass" />
 
 
 </RelativeLayout>
